# ai-prompts

./: .envrc  .gitignore  README.md  justfile  pyproject.toml
.xdg-home/: .z
prompts/interactive-agents/: autonomous.md  interactive.md  minimal.md  opencode-build.md  opencode-plan.md  orchestrator.md  repository-steward.md  unrestricted-test.md  writing.md  zotero-librarian.md
prompts/interactive-agents/lattice-orchestrator/: prompt.md
prompts/interactive-agents/ralph-planner/: prompt.md
prompts/micro-agents/: compaction.md  contextualize-chunk.md  evaluator.md  jules-pr-body-contract.md  summary.md
prompts/micro-agents/prompt-difficulty-classifier/: prompt.md
prompts/shared/: correction-finder-guidelines.md  full-agent.md  global.md  interactive.md
prompts/sub-agents/: codebase-locator.md  explore.md  general.md  jules-pr-body-contract.md  lattice-documentation-librarian.md  lattice-researcher-documentation.md  lattice-tdd-writer.md  lattice-test-method-writer.md  memory-manager.md  opencode-general.md  plan-contract-validator.md  prover.md  python-code-writer.md  sagemath-coder.md  test-compliance-reviewer.md  test-writer.md
prompts/sub-agents/auditors/: plan-reviewer.md  semantic-auditor.md
prompts/sub-agents/code-writers/: general-code-writer.md  sagemath-code-writer.md  typescript-code-writer.md
prompts/sub-agents/correction-finder/: prompt.md
prompts/sub-agents/correction-finder-ask/: prompt.md
prompts/sub-agents/lattice/: lattice-algorithm-porter.md  lattice-checklist-completionist.md  lattice-documentation-librarian.md  lattice-interface-designer.md  lattice-interface-implementer.md  lattice-researcher-documentation.md  lattice-tdd-writer.md  lattice-test-coverage-auditor.md  lattice-test-method-writer.md
prompts/sub-agents/researcher/: prompt.md
prompts/sub-agents/type-designer/: prompt.md
prompts/system/: AGENTS.md
src/ai_prompts/: __init__.py  catalog.py  cli.py
tests/: test_catalog.py  test_transcript_summary_prompt.py
tests/fixtures/: transcript_summary_input.json
(+43 files in other folders)
