[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-prompts"
version = "0.1.0"
description = "Centralized prompt library with slug-based access."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "dzack" }]
dependencies = [
  "pyyaml>=6.0",
  "typer>=0.16.0",
]

[dependency-groups]
dev = ["pytest>=9.0.0"]

[project.scripts]
ai-prompts = "ai_prompts.cli:main"

[project.urls]
Homepage = "https://github.com/dzackgarza/ai-prompts"
Repository = "https://github.com/dzackgarza/ai-prompts"
Issues = "https://github.com/dzackgarza/ai-prompts/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_prompts"]

[tool.hatch.build.targets.wheel.force-include]
"src/ai_prompts/library" = "ai_prompts/library"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
